# dockerized-fastapi-postgresql-sqlalchemy-alembic-template

./: .dockerignore  Dockerfile  Dockerfile_copy  README.md  alembic.ini  compose.yaml  pyproject.toml
app/models/: base.py  user.py
config/: default.env
