[project]
name = "dockerized-fastapi-postgresql-sqlalchemy-alembic-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Brian O'Byrne",email = "brian.obyrne@protonmail.com"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.121.3,<0.122.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "alembic-utils (>=0.8.8,<0.9.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.1,<10.0.0)",
]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
